--- a/home.css
+++ b/home.css
@@ -325,3 +325,13 @@
     justify-content: space-between;
     padding: 5px;
 }
+
+.about{
+    background-color: hsl(0, 0%, 95%);
+    border-radius: 20px;
+    padding: 10px;
+    display: fixed;
+    height: 100%;
+    width: 100%;
+    
+}
